--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/postcss": "4.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.13.1",
@@ -27,15 +31,19 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
     "next": "15.2.0-canary.33",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.5.1",
     "postgres": "^3.4.5",
     "react": "19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.56.4",
     "server-only": "^0.0.1",
     "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.1",
