--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/ssr": "^0.6.1",
     "@tailwindcss/postcss": "4.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.13.1",
@@ -31,7 +32,7 @@
     "drizzle-orm": "^0.39.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
-    "next": "15.2.0-canary.33",
+    "next": "15.3.3",
     "postcss": "^8.5.1",
     "postgres": "^3.4.5",
     "react": "19.0.0",
@@ -46,6 +47,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.30.5"
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.33.0"
   }
 }
